pybasic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> assignment
Rule 2     statement -> declaration
Rule 3     statement -> expression
Rule 4     statement -> funcall
Rule 5     statement -> control
Rule 6     statement -> return
Rule 7     statement -> defun_statement
Rule 8     statement -> block_begin
Rule 9     statement -> block_end
Rule 10    statement -> if_block_begin
Rule 11    statement -> elseif_block_begin
Rule 12    statement -> else_statement
Rule 13    args_list -> args_list COMMA expression
Rule 14    args_list -> expression
Rule 15    params_list -> params_list COMMA ID
Rule 16    params_list -> ID
Rule 17    defun_statement -> DEFUN ID LPAREN params_list RPAREN EQUALS expression
Rule 18    funcall -> ID args_list
Rule 19    assignment -> ID EQUALS expression
Rule 20    assignment -> LET ID EQUALS expression
Rule 21    assignment -> ID LPAREN expression RPAREN EQUALS expression
Rule 22    declaration -> declare_array
Rule 23    declare_array -> DIM ID LPAREN expression RPAREN AS ID
Rule 24    rel_expression -> expression GREATER_THAN expression
Rule 25    rel_expression -> expression LESS_THAN expression
Rule 26    rel_expression -> expression EQUAL_GREATER_THAN expression
Rule 27    rel_expression -> expression EQUAL_LESS_THAN expression
Rule 28    rel_expression -> expression EQUALS expression
Rule 29    rel_expression -> expression NOT_EQUAL expression
Rule 30    rel_expression -> rel_expression AND rel_expression
Rule 31    rel_expression -> rel_expression OR rel_expression
Rule 32    rel_expression -> LPAREN rel_expression RPAREN
Rule 33    rel_expression -> NOT rel_expression
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression TIMES expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> expression EXACTDIV expression
Rule 39    expression -> expression MOD expression
Rule 40    expression -> expression AS expression
Rule 41    expression -> expression EXP expression
Rule 42    expression -> MINUS expression
Rule 43    expression -> LPAREN expression RPAREN
Rule 44    expression -> ID LPAREN RPAREN
Rule 45    expression -> ID LPAREN args_list RPAREN
Rule 46    expression -> INTEGER
Rule 47    expression -> DECIMAL
Rule 48    expression -> STRING
Rule 49    expression -> ID
Rule 50    expression -> LBRACE args_list RBRACE
Rule 51    block_begin -> while_block_begin
Rule 52    block_begin -> for_block_begin
Rule 53    block_begin -> do_block_begin
Rule 54    block_begin -> function_block_begin
Rule 55    if_block_begin -> IF rel_expression THEN
Rule 56    else_statement -> ELSE
Rule 57    elseif_block_begin -> ELSEIF rel_expression THEN
Rule 58    while_block_begin -> WHILE rel_expression
Rule 59    do_block_begin -> DO
Rule 60    for_block_begin -> FOR ID EQUALS expression TO expression
Rule 61    for_block_begin -> FOR ID EQUALS expression TO expression STEP expression
Rule 62    function_block_begin -> SUB ID LPAREN params_list RPAREN
Rule 63    function_block_begin -> FUNCTION ID LPAREN params_list RPAREN
Rule 64    block_end -> END IF
Rule 65    block_end -> END WHILE
Rule 66    block_end -> WEND
Rule 67    block_end -> END FOR
Rule 68    block_end -> NEXT ID
Rule 69    block_end -> LOOP
Rule 70    block_end -> LOOP WHILE rel_expression
Rule 71    block_end -> LOOP UNTIL rel_expression
Rule 72    block_end -> END SUB
Rule 73    block_end -> END FUNCTION
Rule 74    return -> RETURN
Rule 75    return -> RETURN expression
Rule 76    control -> EXIT WHILE
Rule 77    control -> EXIT DO
Rule 78    control -> EXIT FOR
Rule 79    control -> CONTINUE WHILE
Rule 80    control -> CONTINUE DO
Rule 81    control -> CONTINUE FOR
Rule 82    statement -> USE ID

Terminals, with rules where they appear

AND                  : 30
AS                   : 23 40
COMMA                : 13 15
CONTINUE             : 79 80 81
DECIMAL              : 47
DEFUN                : 17
DIM                  : 23
DIVIDE               : 37
DO                   : 59 77 80
ELSE                 : 56
ELSEIF               : 57
END                  : 64 65 67 72 73
EQUALS               : 17 19 20 21 28 60 61
EQUAL_GREATER_THAN   : 26
EQUAL_LESS_THAN      : 27
EXACTDIV             : 38
EXIT                 : 76 77 78
EXP                  : 41
FOR                  : 60 61 67 78 81
FUNCTION             : 63 73
GREATER_THAN         : 24
ID                   : 15 16 17 18 19 20 21 23 23 44 45 49 60 61 62 63 68 82
IF                   : 55 64
INTEGER              : 46
LBRACE               : 50
LESS_THAN            : 25
LET                  : 20
LOOP                 : 69 70 71
LPAREN               : 17 21 23 32 43 44 45 62 63
MINUS                : 35 42
MOD                  : 39
NEXT                 : 68
NOT                  : 33
NOT_EQUAL            : 29
OR                   : 31
PLUS                 : 34
RBRACE               : 50
RETURN               : 74 75
RPAREN               : 17 21 23 32 43 44 45 62 63
STEP                 : 61
STRING               : 48
SUB                  : 62 72
THEN                 : 55 57
TIMES                : 36
TO                   : 60 61
UNTIL                : 71
USE                  : 82
WEND                 : 66
WHILE                : 58 65 70 76 79
error                : 

Nonterminals, with rules where they appear

args_list            : 13 18 45 50
assignment           : 1
block_begin          : 8
block_end            : 9
control              : 5
declaration          : 2
declare_array        : 22
defun_statement      : 7
do_block_begin       : 53
else_statement       : 12
elseif_block_begin   : 11
expression           : 3 13 14 17 19 20 21 21 23 24 24 25 25 26 26 27 27 28 28 29 29 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 60 60 61 61 61 75
for_block_begin      : 52
funcall              : 4
function_block_begin : 54
if_block_begin       : 10
params_list          : 15 17 62 63
rel_expression       : 30 30 31 31 32 33 55 57 58 70 71
return               : 6
statement            : 0
while_block_begin    : 51

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . assignment
    (2) statement -> . declaration
    (3) statement -> . expression
    (4) statement -> . funcall
    (5) statement -> . control
    (6) statement -> . return
    (7) statement -> . defun_statement
    (8) statement -> . block_begin
    (9) statement -> . block_end
    (10) statement -> . if_block_begin
    (11) statement -> . elseif_block_begin
    (12) statement -> . else_statement
    (82) statement -> . USE ID
    (19) assignment -> . ID EQUALS expression
    (20) assignment -> . LET ID EQUALS expression
    (21) assignment -> . ID LPAREN expression RPAREN EQUALS expression
    (22) declaration -> . declare_array
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXACTDIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression AS expression
    (41) expression -> . expression EXP expression
    (42) expression -> . MINUS expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . ID LPAREN RPAREN
    (45) expression -> . ID LPAREN args_list RPAREN
    (46) expression -> . INTEGER
    (47) expression -> . DECIMAL
    (48) expression -> . STRING
    (49) expression -> . ID
    (50) expression -> . LBRACE args_list RBRACE
    (18) funcall -> . ID args_list
    (76) control -> . EXIT WHILE
    (77) control -> . EXIT DO
    (78) control -> . EXIT FOR
    (79) control -> . CONTINUE WHILE
    (80) control -> . CONTINUE DO
    (81) control -> . CONTINUE FOR
    (74) return -> . RETURN
    (75) return -> . RETURN expression
    (17) defun_statement -> . DEFUN ID LPAREN params_list RPAREN EQUALS expression
    (51) block_begin -> . while_block_begin
    (52) block_begin -> . for_block_begin
    (53) block_begin -> . do_block_begin
    (54) block_begin -> . function_block_begin
    (64) block_end -> . END IF
    (65) block_end -> . END WHILE
    (66) block_end -> . WEND
    (67) block_end -> . END FOR
    (68) block_end -> . NEXT ID
    (69) block_end -> . LOOP
    (70) block_end -> . LOOP WHILE rel_expression
    (71) block_end -> . LOOP UNTIL rel_expression
    (72) block_end -> . END SUB
    (73) block_end -> . END FUNCTION
    (55) if_block_begin -> . IF rel_expression THEN
    (57) elseif_block_begin -> . ELSEIF rel_expression THEN
    (56) else_statement -> . ELSE
    (23) declare_array -> . DIM ID LPAREN expression RPAREN AS ID
    (58) while_block_begin -> . WHILE rel_expression
    (60) for_block_begin -> . FOR ID EQUALS expression TO expression
    (61) for_block_begin -> . FOR ID EQUALS expression TO expression STEP expression
    (59) do_block_begin -> . DO
    (62) function_block_begin -> . SUB ID LPAREN params_list RPAREN
    (63) function_block_begin -> . FUNCTION ID LPAREN params_list RPAREN

    USE             shift and go to state 14
    ID              shift and go to state 15
    LET             shift and go to state 16
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 17
    INTEGER         shift and go to state 20
    DECIMAL         shift and go to state 21
    STRING          shift and go to state 22
    LBRACE          shift and go to state 23
    EXIT            shift and go to state 24
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    DEFUN           shift and go to state 30
    END             shift and go to state 35
    WEND            shift and go to state 37
    NEXT            shift and go to state 38
    LOOP            shift and go to state 39
    IF              shift and go to state 36
    ELSEIF          shift and go to state 42
    ELSE            shift and go to state 43
    DIM             shift and go to state 44
    WHILE           shift and go to state 25
    FOR             shift and go to state 27
    DO              shift and go to state 26
    SUB             shift and go to state 40
    FUNCTION        shift and go to state 41

    statement                      shift and go to state 1
    assignment                     shift and go to state 2
    declaration                    shift and go to state 3
    expression                     shift and go to state 4
    funcall                        shift and go to state 5
    control                        shift and go to state 6
    return                         shift and go to state 7
    defun_statement                shift and go to state 8
    block_begin                    shift and go to state 9
    block_end                      shift and go to state 10
    if_block_begin                 shift and go to state 11
    elseif_block_begin             shift and go to state 12
    else_statement                 shift and go to state 13
    declare_array                  shift and go to state 18
    while_block_begin              shift and go to state 31
    for_block_begin                shift and go to state 32
    do_block_begin                 shift and go to state 33
    function_block_begin           shift and go to state 34

state 1

    (0) S' -> statement .



state 2

    (1) statement -> assignment .

    $end            reduce using rule 1 (statement -> assignment .)


state 3

    (2) statement -> declaration .

    $end            reduce using rule 2 (statement -> declaration .)


state 4

    (3) statement -> expression .
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . TIMES expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . EXACTDIV expression
    (39) expression -> expression . MOD expression
    (40) expression -> expression . AS expression
    (41) expression -> expression . EXP expression

    $end            reduce using rule 3 (statement -> expression .)
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    EXACTDIV        shift and go to state 49
    MOD             shift and go to state 50
    AS              shift and go to state 51
    EXP             shift and go to state 52


state 5

    (4) statement -> funcall .

    $end            reduce using rule 4 (statement -> funcall .)


state 6

    (5) statement -> control .

    $end            reduce using rule 5 (statement -> control .)


state 7

    (6) statement -> return .

    $end            reduce using rule 6 (statement -> return .)


state 8

    (7) statement -> defun_statement .

    $end            reduce using rule 7 (statement -> defun_statement .)


state 9

    (8) statement -> block_begin .

    $end            reduce using rule 8 (statement -> block_begin .)


state 10

    (9) statement -> block_end .

    $end            reduce using rule 9 (statement -> block_end .)


state 11

    (10) statement -> if_block_begin .

    $end            reduce using rule 10 (statement -> if_block_begin .)


state 12

    (11) statement -> elseif_block_begin .

    $end            reduce using rule 11 (statement -> elseif_block_begin .)


state 13

    (12) statement -> else_statement .

    $end            reduce using rule 12 (statement -> else_statement .)


state 14

    (82) statement -> USE . ID

    ID              shift and go to state 53


state 15

    (19) assignment -> ID . EQUALS expression
    (21) assignment -> ID . LPAREN expression RPAREN EQUALS expression
    (44) expression -> ID . LPAREN RPAREN
    (45) expression -> ID . LPAREN args_list RPAREN
    (49) expression -> ID .
    (18) funcall -> ID . args_list
    (13) args_list -> . args_list COMMA expression
    (14) args_list -> . expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXACTDIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression AS expression
    (41) expression -> . expression EXP expression
    (42) expression -> . MINUS expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . ID LPAREN RPAREN
    (45) expression -> . ID LPAREN args_list RPAREN
    (46) expression -> . INTEGER
    (47) expression -> . DECIMAL
    (48) expression -> . STRING
    (49) expression -> . ID
    (50) expression -> . LBRACE args_list RBRACE

  ! shift/reduce conflict for MINUS resolved as shift
    EQUALS          shift and go to state 55
    LPAREN          shift and go to state 57
    PLUS            reduce using rule 49 (expression -> ID .)
    TIMES           reduce using rule 49 (expression -> ID .)
    DIVIDE          reduce using rule 49 (expression -> ID .)
    EXACTDIV        reduce using rule 49 (expression -> ID .)
    MOD             reduce using rule 49 (expression -> ID .)
    AS              reduce using rule 49 (expression -> ID .)
    EXP             reduce using rule 49 (expression -> ID .)
    $end            reduce using rule 49 (expression -> ID .)
    MINUS           shift and go to state 19
    ID              shift and go to state 54
    INTEGER         shift and go to state 20
    DECIMAL         shift and go to state 21
    STRING          shift and go to state 22
    LBRACE          shift and go to state 23

  ! MINUS           [ reduce using rule 49 (expression -> ID .) ]

    expression                     shift and go to state 56
    args_list                      shift and go to state 58

state 16

    (20) assignment -> LET . ID EQUALS expression

    ID              shift and go to state 59


state 17

    (43) expression -> LPAREN . expression RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXACTDIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression AS expression
    (41) expression -> . expression EXP expression
    (42) expression -> . MINUS expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . ID LPAREN RPAREN
    (45) expression -> . ID LPAREN args_list RPAREN
    (46) expression -> . INTEGER
    (47) expression -> . DECIMAL
    (48) expression -> . STRING
    (49) expression -> . ID
    (50) expression -> . LBRACE args_list RBRACE

    MINUS           shift and go to state 19
    LPAREN          shift and go to state 17
    ID              shift and go to state 54
    INTEGER         shift and go to state 20
    DECIMAL         shift and go to state 21
    STRING          shift and go to state 22
    LBRACE          shift and go to state 23

    expression                     shift and go to state 60

state 18

    (22) declaration -> declare_array .

    $end            reduce using rule 22 (declaration -> declare_array .)


state 19

    (42) expression -> MINUS . expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXACTDIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression AS expression
    (41) expression -> . expression EXP expression
    (42) expression -> . MINUS expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . ID LPAREN RPAREN
    (45) expression -> . ID LPAREN args_list RPAREN
    (46) expression -> . INTEGER
    (47) expression -> . DECIMAL
    (48) expression -> . STRING
    (49) expression -> . ID
    (50) expression -> . LBRACE args_list RBRACE

    MINUS           shift and go to state 19
    LPAREN          shift and go to state 17
    ID              shift and go to state 54
    INTEGER         shift and go to state 20
    DECIMAL         shift and go to state 21
    STRING          shift and go to state 22
    LBRACE          shift and go to state 23

    expression                     shift and go to state 61

state 20

    (46) expression -> INTEGER .

    PLUS            reduce using rule 46 (expression -> INTEGER .)
    MINUS           reduce using rule 46 (expression -> INTEGER .)
    TIMES           reduce using rule 46 (expression -> INTEGER .)
    DIVIDE          reduce using rule 46 (expression -> INTEGER .)
    EXACTDIV        reduce using rule 46 (expression -> INTEGER .)
    MOD             reduce using rule 46 (expression -> INTEGER .)
    AS              reduce using rule 46 (expression -> INTEGER .)
    EXP             reduce using rule 46 (expression -> INTEGER .)
    $end            reduce using rule 46 (expression -> INTEGER .)
    COMMA           reduce using rule 46 (expression -> INTEGER .)
    RPAREN          reduce using rule 46 (expression -> INTEGER .)
    RBRACE          reduce using rule 46 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 46 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 46 (expression -> INTEGER .)
    EQUAL_GREATER_THAN reduce using rule 46 (expression -> INTEGER .)
    EQUAL_LESS_THAN reduce using rule 46 (expression -> INTEGER .)
    EQUALS          reduce using rule 46 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 46 (expression -> INTEGER .)
    AND             reduce using rule 46 (expression -> INTEGER .)
    OR              reduce using rule 46 (expression -> INTEGER .)
    THEN            reduce using rule 46 (expression -> INTEGER .)
    TO              reduce using rule 46 (expression -> INTEGER .)
    STEP            reduce using rule 46 (expression -> INTEGER .)


state 21

    (47) expression -> DECIMAL .
